[gd_scene load_steps=14 format=2]

[ext_resource path="res://Menus/MainMenu/DancingLetterContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menus/MainMenu/FrogWalking.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://sfx/StartScreen-Theme.ogg" type="AudioStream" id=4]
[ext_resource path="res://Menus/MainMenu/StarryBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/TovariSans.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Level0AttractMode.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menus/MainMenu/TitleFont.tres" type="DynamicFont" id=8]
[ext_resource path="res://Menus/MainMenu/DemoLabel.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "difficulty"
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/CenterContainer/StartText:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/CenterContainer/DifficultySelector:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("MarginContainer/CenterContainer/DifficultySelector/Easy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/CenterContainer/StartText:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/CenterContainer/DifficultySelector:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=3]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=4]
resource_name = "transition"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_fade_complete"
} ]
}

[node name="MainMenuRootNode" type="Node"]
script = ExtResource( 3 )
attract_scene = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
autoplay = true
bus = "Music"

[node name="StarryBackground" parent="." instance=ExtResource( 5 )]
layer = -101

[node name="FrogWalking" parent="." instance=ExtResource( 2 )]
layer = -100

[node name="DancingTextLayer" type="CanvasLayer" parent="."]
layer = -99

[node name="MarginContainer" type="MarginContainer" parent="DancingTextLayer"]
margin_right = 640.0
margin_bottom = 512.0
custom_constants/margin_top = 70
custom_constants/margin_bottom = 242
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="DancingTextLayer/MarginContainer"]
margin_top = 70.0
margin_right = 640.0
margin_bottom = 270.0

[node name="DancingLetterContainer" parent="DancingTextLayer/MarginContainer/CenterContainer" instance=ExtResource( 1 )]
margin_left = 320.0
margin_right = 320.0

[node name="MainMenuLayer" type="CanvasLayer" parent="."]
layer = -99

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainMenuLayer"]
anims/difficulty = SubResource( 1 )
anims/start_text = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MainMenuLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 200
custom_constants/margin_left = 32
custom_constants/margin_bottom = 96
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainMenuLayer/MarginContainer"]
margin_left = 32.0
margin_top = 200.0
margin_right = 608.0
margin_bottom = 416.0

[node name="StartText" type="Label" parent="MainMenuLayer/MarginContainer/CenterContainer"]
margin_left = 120.0
margin_top = 95.0
margin_right = 456.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 3 )
text = "Press the Jump button to start!"

[node name="DifficultySelector" type="VBoxContainer" parent="MainMenuLayer/MarginContainer/CenterContainer"]
visible = false
margin_left = 214.0
margin_top = 74.0
margin_right = 362.0
margin_bottom = 142.0

[node name="Label" type="Label" parent="MainMenuLayer/MarginContainer/CenterContainer/DifficultySelector"]
margin_right = 40.0
margin_bottom = 16.0
text = "Select your difficulty:"

[node name="Easy" type="Button" parent="MainMenuLayer/MarginContainer/CenterContainer/DifficultySelector"]
margin_right = 45.0
margin_bottom = 22.0
text = "Easy"

[node name="Hard" type="Button" parent="MainMenuLayer/MarginContainer/CenterContainer/DifficultySelector"]
margin_top = 30.0
margin_right = 45.0
margin_bottom = 52.0
text = "Hard"

[node name="FadeToBlackLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="ColorRect" type="ColorRect" parent="FadeToBlackLayer"]
visible = false
margin_right = 640.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeToBlackLayer"]
anims/transition = SubResource( 4 )

[node name="ViewportLayer" type="CanvasLayer" parent="."]

[node name="AttractModeViewportContainer" type="ViewportContainer" parent="ViewportLayer"]
visible = false
margin_right = 640.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportLayer/AttractModeViewportContainer"]
size = Vector2( 640, 512 )
handle_input_locally = false
render_target_update_mode = 0
audio_listener_enable_2d = true

[node name="MarginContainer" type="MarginContainer" parent="ViewportLayer"]
visible = false
margin_right = 640.0
margin_bottom = 512.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 440
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ViewportLayer/MarginContainer"]
margin_top = 20.0
margin_right = 640.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ViewportLayer/MarginContainer/CenterContainer"]
margin_left = 253.0
margin_right = 386.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.435294, 0.756863, 0.215686, 1 )
text = "DEMO"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="done_walking" from="FrogWalking" to="." method="_on_FrogWalking_done_walking"]
[connection signal="pressed" from="MainMenuLayer/MarginContainer/CenterContainer/DifficultySelector/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="MainMenuLayer/MarginContainer/CenterContainer/DifficultySelector/Hard" to="." method="_on_Hard_pressed"]
